# AgentLabKit

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  THIRD_PARTY_LICENSES.md  docker-compose.yml
backend/: AGENTS.md  Dockerfile  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0001_initial_schema.sql  0002_align_not_null.py  0003_align_timestamp_nontz.py  0004_hybrid_search.py  0005_simplify_binding_scene.py  0006_add_model_pricing_cache_columns.py  0007_add_agent_tool_fields.py  0008_add_binding_extra_json.py  0009_chat_sessions.py  0010_kb_unique_constraints.py  0011_add_mcp_server_stdio_fields.py  0012_remove_glossary_definition.py  0013_add_glossary_term_unique.py  0014_add_model_request_logs_composite_indexes.py  0015_vector_1024_dims.py  0016_add_chat_messages_updated_at.py  0017_rename_model_binding_key_to_model_key.py  0018_extend_auth_users.py
backend/src/: bootstrap.py  config.py  main.py  worker.py
backend/src/common/: auth.py  crud.py  datetime_utils.py  dependencies.py  errors.py  json_response.py  response.py  schemas.py
backend/src/modules/agent/: builtin_tools.py  definition_loader.py  dependencies.py  mcp_router.py  models.py  router.py  schemas.py  seed.py  skills_router.py  tools_router.py
backend/src/modules/ai_invoke/: router.py  (+3 more)
backend/src/runtime/: __init__.py  bootstrap.py  web_modules.py
backend/tests/: conftest.py  test_agent_definition_loader.py  test_agent_lifecycle.py  test_agent_turn.py  test_auth.py  test_builtin_tools.py  test_chat_sessions.py  test_files.py  test_knowledge_base.py  test_memory.py  test_span_builder.py  test_unauthenticated.py
(+627 files in other folders)
